--- a/Remora.Sdk/Remora.Sdk.csproj
+++ b/Remora.Sdk/Remora.Sdk.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.Build.NoTargets/3.5.6">
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <NoWarn>NU5128</NoWarn>
     </PropertyGroup>
 
     <PropertyGroup>
