--- a/Remora.Sdk/Sdk/Sdk.props
+++ b/Remora.Sdk/Sdk/Sdk.props
@@ -4,58 +4,24 @@
 -->
 
 <Project Sdk="Microsoft.NET.Sdk">
-    <!-- Common properties for all projects -->
+    <!-- Default common properties -->
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
-        <Deterministic>true</Deterministic>
-        <DebugSymbols>true</DebugSymbols>
-
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-        <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
     </PropertyGroup>
 
-    <!-- Targeting helpers -->
+    <!-- Default nuget properties -->
     <PropertyGroup>
-        <LibraryFrameworks>netstandard2.1;net6.0</LibraryFrameworks>
-        <ExecutableFrameworks>net6.0</ExecutableFrameworks>
-
-        <!-- Default for all projects -->
-        <!--suppress MsbuildTargetFrameworkTagInspection -->
-        <TargetFrameworks>$(LibraryFrameworks)</TargetFrameworks>
-    </PropertyGroup>
-
-    <!-- NuGet-related properties -->
-    <PropertyGroup>
+        <IsPackable>true</IsPackable>
         <Title>$(AssemblyName)</Title>
         <Authors>Jarl Gullberg</Authors>
-        <Copyright>$(Authors) $([System.DateTime]::UtcNow.ToString(`yyyy`))</Copyright>
-        
-        <IncludeSymbols>true</IncludeSymbols>
-        <IncludeSource>true</IncludeSource>
-        <PublishRepositoryUrl>true</PublishRepositoryUrl>
-        <EmbedUntrackedSources>true</EmbedUntrackedSources>
-        <EmbedAllSources>true</EmbedAllSources>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-        
-        <PackageOutputPath>$(MSBuildThisFileDirectory)nuget</PackageOutputPath>
-        <PackageIcon>shark.png</PackageIcon>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
+
+        <PackageIconPath>$(MSBuildThisFileDirectory)/images/shark.png</PackageIconPath>
         <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
-    
-    
-    <!-- Code inspection properties -->
+
+    <!-- Default code inspection properties -->
     <PropertyGroup>
-        <StyleCopRuleset>$(MSBuildThisFileDirectory)/inspections/stylecop.ruleset</StyleCopRuleset>
-        <StyleCopConfiguration>$(MSBuildThisFileDirectory)/inspections/stylecop.json</StyleCopConfiguration>
-
-        <Nullable>enable</Nullable>
-
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-
-        <AnalysisLevel>7</AnalysisLevel>
-        <CodeAnalysisRuleSet>$(StyleCopRuleset)</CodeAnalysisRuleSet>
         <WarningsAsErrors>
             CS8600;
             CS8601;
@@ -94,17 +60,17 @@
         <NoWarn>
             CS8632;
             AD0001;
+            SA0001;
         </NoWarn>
     </PropertyGroup>
 
-    <ItemGroup>
-        <AdditionalFiles Include="$(StyleCopConfiguration)">
-            <Link>stylecop.json</Link>
-            <InProject>false</InProject>
-        </AdditionalFiles>
-        <AdditionalFiles Include="$(StyleCopRuleset)">
-            <Link>stylecop.ruleset</Link>
-            <InProject>false</InProject>
-        </AdditionalFiles>
-    </ItemGroup>
+    <!-- Default targeting properties -->
+    <PropertyGroup>
+        <LibraryFrameworks>netstandard2.1;net6.0</LibraryFrameworks>
+        <ExecutableFrameworks>net6.0</ExecutableFrameworks>
+
+        <!-- Default for all projects -->
+        <!--suppress MsbuildTargetFrameworkTagInspection -->
+        <TargetFrameworks>$(LibraryFrameworks)</TargetFrameworks>
+    </PropertyGroup>
 </Project>
