--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,7 +1,25 @@
 <Project>
-    <ItemGroup Condition="'$(IsPackable)' == 'true'">
+    <ItemGroup Condition="$(IsPackable)">
         <None Include="Sdk\**" Pack="true" PackagePath="Sdk" />
-        <None Include="$(MSBuildProjectDirectory)/README.md" Pack="true" PackagePath="/" />
-        <None Include="$(PackageIconPath)" Pack="true" PackagePath="\" Visible="false" />
+    </ItemGroup>
+    
+    <!-- NuGet README -->
+    <ItemGroup Condition="$(IsPackable)">
+        <None Include="$(MSBuildProjectDirectory)/README.md" Pack="true" PackagePath="/">
+            <Link>README.md</Link>
+        </None>
+    </ItemGroup>
+
+    <!-- NuGet Icon -->
+    <PropertyGroup Condition="$(IsPackable) And Exists('$(PackageIconPath)')">
+        <IconName>$([System.IO.Path]::GetFileName('$(PackageIconPath)'))</IconName>
+        <PackageIcon>$(IconName)</PackageIcon>
+    </PropertyGroup>
+
+    <ItemGroup Condition="$(IsPackable) And Exists('$(PackageIconPath)')">
+        <None Include="$(PackageIconPath)" Pack="true" PackagePath="/">
+            <Link>$(IconName)</Link>
+            <InProject>false</InProject>
+        </None>
     </ItemGroup>
 </Project>
