--- a/Remora.Tests.Sdk/Sdk/Sdk.props
+++ b/Remora.Tests.Sdk/Sdk/Sdk.props
@@ -1,11 +1,11 @@
 <Project Sdk="Remora.Sdk/1.0.0">
-
+    <!-- Override target frameworks -->
     <PropertyGroup>
         <TargetFrameworks>$([System.Text.RegularExpressions.Regex]::Replace($(LibraryFrameworks), 'netstandard.+?;', ''))</TargetFrameworks>
     </PropertyGroup>
 
+    <!-- Override packability -->
     <PropertyGroup>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
-    
 </Project>
