Add generation of embedded SDK name & version information.

--- a/Remora.Sdk/Sdk/Sdk.props
+++ b/Remora.Sdk/Sdk/Sdk.props
@@ -1,4 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <Import Project="VersionInformation.props"/>
+
     <!-- Default targeting configuration -->
     <PropertyGroup>
         <LibraryFrameworks>netstandard2.1;net6.0</LibraryFrameworks>
