Improve regeneration target.

--- a/Tests/Directory.Build.props
+++ b/Tests/Directory.Build.props
@@ -1,2 +1,5 @@
 <Project>
+    <PropertyGroup>
+        <LocalRepoPath>$(MSBuildThisFileDirectory)/../nuget</LocalRepoPath>
+    </PropertyGroup>
 </Project>
