Enable deterministic build.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 <Project>
   <PropertyGroup>
     <EnableDefaultNoneItems>false</EnableDefaultNoneItems>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
   <PropertyGroup>
