--- a/Remora.Sdk/Sdk/Sdk.targets
+++ b/Remora.Sdk/Sdk/Sdk.targets
@@ -1,4 +1,5 @@
 <Project>
+    <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
     <Import Project="Sdk.tasks"/>
 
     <!-- Forced common properties -->
