--- a/Remora.Tests.Sdk/Sdk/Sdk.targets
+++ b/Remora.Tests.Sdk/Sdk/Sdk.targets
@@ -1,4 +1,6 @@
 <Project>
+    <Import Project="Sdk.targets" Sdk="Remora.Sdk" Version="1.0.0" />
+
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
