Use ExecutableFrameworks instead of a weird regex.

--- a/Remora.Tests.Sdk/Sdk/Sdk.props
+++ b/Remora.Tests.Sdk/Sdk/Sdk.props
@@ -4,6 +4,6 @@
 
     <!-- Override target frameworks -->
     <PropertyGroup>
-        <TargetFrameworks>$([System.Text.RegularExpressions.Regex]::Replace($(LibraryFrameworks), 'netstandard.+?;', ''))</TargetFrameworks>
+        <LibraryFrameworks>$(ExecutableFrameworks)</LibraryFrameworks>
     </PropertyGroup>
 </Project>
