--- a/Remora.Tests.Sdk/Sdk/Sdk.targets
+++ b/Remora.Tests.Sdk/Sdk/Sdk.targets
@@ -1,5 +1,5 @@
 <Project>
-    <Import Project="Sdk.targets" Sdk="Remora.Sdk" Version="1.0.0" />
+    <Import Project="Sdk.targets" Sdk="Remora.Sdk" Version="1.0.0-preview1" />
 
     <!-- Override packability -->
     <PropertyGroup>
