Update referenced versions.

--- a/Tests/TestProject/TestProject.csproj
+++ b/Tests/TestProject/TestProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Remora.Tests.Sdk/1.0.0">
+<Project Sdk="Remora.Tests.Sdk/1.0.0-preview1">
     <PropertyGroup>
         <LegalAuthor>Jarl Gullberg</LegalAuthor>
         <LegalEmail>jarl.gullberg@gmail.com</LegalEmail>
