--- a/Tests/ConsoleProject/ConsoleProject.csproj
+++ b/Tests/ConsoleProject/ConsoleProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Remora.Sdk/1.0.0">
+<Project Sdk="Remora.Sdk/1.0.0-preview1">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
     </PropertyGroup>
