Enable exclusion of code coverage.

--- a/Remora.Tests.Sdk/Sdk/Sdk.props
+++ b/Remora.Tests.Sdk/Sdk/Sdk.props
@@ -6,4 +6,9 @@
     <PropertyGroup>
         <LibraryFrameworks>$(ExecutableFrameworks)</LibraryFrameworks>
     </PropertyGroup>
+
+    <!-- Default code coverage properties -->
+    <PropertyGroup>
+        <ExcludeTestsFromCoverage>true</ExcludeTestsFromCoverage>
+    </PropertyGroup>
 </Project>
