--- a/Remora.Tests.Sdk/Sdk/Sdk.targets
+++ b/Remora.Tests.Sdk/Sdk/Sdk.targets
@@ -6,6 +6,11 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
+    <!-- Suppress code coverage if requested -->
+    <ItemGroup Condition="'$(ExcludeTestsFromCoverage)' == 'true'">
+        <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage" />
+    </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
