--- a/Remora.Sdk/Sdk/Sdk.props
+++ b/Remora.Sdk/Sdk/Sdk.props
@@ -70,4 +70,9 @@
             SA0001;
         </NoWarn>
     </PropertyGroup>
+
+    <!-- Code coverage -->
+    <PropertyGroup>
+        <ExcludeNonRunnableFrameworksFromCoverage>true</ExcludeNonRunnableFrameworksFromCoverage>
+    </PropertyGroup>
 </Project>
