--- a/Remora.Sdk/Sdk/Sdk.targets
+++ b/Remora.Sdk/Sdk/Sdk.targets
@@ -122,7 +122,7 @@
         <CodeAnalysisRuleSet>$(StylecopRuleset)</CodeAnalysisRuleSet>
     </PropertyGroup>
 
-    <Target Name="GenerateStylecopJson" BeforeTargets="CompileDesignTime;Compile">
+    <Target Name="GenerateStylecopJson" BeforeTargets="CompileDesignTime;Compile;PrepareForBuild">
         <PropertyGroup Condition="'$(LicenseTextFile)' == ''">
             <LicenseTextFile>$(MSBuildThisFileDirectory)/license-headers/$(LegalLicense)</LicenseTextFile>
         </PropertyGroup>
