--- a/Tests/TestProject/TestProject.csproj
+++ b/Tests/TestProject/TestProject.csproj
@@ -1,6 +1,10 @@
-<Project Sdk="Remora.Tests.Sdk/1.0.0-preview1">
+<Project>
+    <Import Project="../../Remora.Tests.Sdk/Sdk/Sdk.props" />
+
     <PropertyGroup>
         <LegalAuthor>Jarl Gullberg</LegalAuthor>
         <LegalEmail>jarl.gullberg@gmail.com</LegalEmail>
     </PropertyGroup>
+
+    <Import Project="../../Remora.Tests.Sdk/Sdk/Sdk.targets" />
 </Project>
