--- a/Remora.Sdk/Sdk/Sdk.targets
+++ b/Remora.Sdk/Sdk/Sdk.targets
@@ -122,7 +122,7 @@
         <CodeAnalysisRuleSet>$(StylecopRuleset)</CodeAnalysisRuleSet>
     </PropertyGroup>
 
-    <Target Name="GenerateStylecopJson" BeforeTargets="CompileDesignTime;Compile;PrepareForBuild">
+    <Target Name="GenerateStylecopJson" Condition="'$(HasGeneratedStylecopJson)' != 'true'" BeforeTargets="CompileDesignTime;Compile;PrepareForBuild">
         <PropertyGroup Condition="'$(LicenseTextFile)' == ''">
             <LicenseTextFile>$(MSBuildThisFileDirectory)/license-headers/$(LegalLicense)</LicenseTextFile>
         </PropertyGroup>
@@ -172,6 +172,11 @@
                 OutputFilename="$(StylecopOutputPath)"
                 MatchExpression="__REMORA_COPYRIGHT_TEXT_MARKER"
                 ReplacementText="$(LicenseText)" />
+
+        <CreateProperty Value="true">
+            <Output TaskParameter="Value" PropertyName="HasGeneratedStylecopJson" />
+        </CreateProperty>
+        <Message Importance="high" Text="Generated stylecop.json" />
     </Target>
 
     <ItemGroup>
