Use version prefixes.

--- a/Remora.Sdk/Remora.Sdk.csproj
+++ b/Remora.Sdk/Remora.Sdk.csproj
@@ -7,7 +7,7 @@
     <PropertyGroup>
         <Title>Remora.Sdk</Title>
         <Description>Provides default properties and targets for Remora-style projects.</Description>
-        <Version>1.0.0-preview7</Version>
+        <VersionPrefix>1.0.0-preview7</VersionPrefix>
         <IsPackable>true</IsPackable>
         <PackageTags>MSBuild;MSBuildSdk;Remora</PackageTags>
         <PackageType>MSBuildSdk</PackageType>
