--- a/Remora.Tests.Sdk/Remora.Tests.Sdk.csproj
+++ b/Remora.Tests.Sdk/Remora.Tests.Sdk.csproj
@@ -7,7 +7,7 @@
     <PropertyGroup>
         <Title>Remora.Tests.Sdk</Title>
         <Description>Provides default properties and targets for Remora-style unit test projects.</Description>
-        <Version>1.0.0-preview7</Version>
+        <VersionPrefix>1.0.0-preview7</VersionPrefix>
         <IsPackable>true</IsPackable>
         <PackageTags>MSBuild;MSBuildSdk;Remora;Tests;Unit Tests</PackageTags>
         <PackageType>MSBuildSdk</PackageType>
