--- a/Remora.Sdk/Sdk/Sdk.targets
+++ b/Remora.Sdk/Sdk/Sdk.targets
@@ -122,7 +122,7 @@
         <CodeAnalysisRuleSet>$(StylecopRuleset)</CodeAnalysisRuleSet>
     </PropertyGroup>
 
-    <Target Name="GenerateStylecopJson" Condition="'$(HasGeneratedStylecopJson)' != 'true'" BeforeTargets="CompileDesignTime;Compile;PrepareForBuild">
+    <Target Name="GenerateStylecopJson" Condition="'$(HasGeneratedStylecopJson)' != 'true'" BeforeTargets="CompileDesignTime;Compile;PrepareForBuild;Restore">
         <PropertyGroup Condition="'$(LicenseTextFile)' == ''">
             <LicenseTextFile>$(MSBuildThisFileDirectory)/license-headers/$(LegalLicense)</LicenseTextFile>
         </PropertyGroup>
@@ -176,6 +176,8 @@
         <CreateProperty Value="true">
             <Output TaskParameter="Value" PropertyName="HasGeneratedStylecopJson" />
         </CreateProperty>
+
+        <Message Importance="high" Text="Generated stylecop.json ($(MSBuildProjectFile))" />
     </Target>
 
     <ItemGroup>
